[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Piranha/SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Piranha/SpriteSheet_n.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Piranha/Piranha.gd" type="Script" id=3]
[ext_resource path="res://Audio/Video_Game_Splash-Ploor-699235037.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.3298, 27.8758 )

[sub_resource type="Animation" id=2]
resource_name = "Base"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Piranha" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 516
collision_mask = 514
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
speed = 800
gravity = 15

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
normal_map = ExtResource( 2 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Base = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SplashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
